modify entity with axois
