# router/router.go
@@ -40,15 +40,16 @@ func register(router *gin.Engine) {
 	auth := router.Group("/authJwt")
 	auth.Use(middleware.AuthMiddleware())
 	// 其他需要 JWT 验证的接口
-	auth.POST("/register", controller.AddUser)
-	auth.DELETE("/delete/user/:id", controller.DeleteUser)
+	//auth.POST("/register", controller.AddUser)
+	//auth.DELETE("/delete/user/:id", controller.DeleteUser)
 	auth.GET("/ping2", func(c *gin.Context) {
 		c.JSON(200, gin.H{
 			"message": "pong",
 		})
 	})
+	router.DELETE("api/delete/:id", controller.DeleteUser)
 	router.GET("/api/user/:username", controller.SearchUser)
-	//router.GET("/api/user", controller.SearchUserAll)
+	router.POST("/register", controller.AddUser)
 	router.GET("/api/captcha", controller.Captcha)
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.POST("/api/login", controller.Login)
